# rec-engine

./: .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.md  candidate-recommendation-system.md  data_science.md  nixpacks.toml  pyproject.toml  railway.toml
data/: candidates.json  ground_truth.json  jobs.json  training_data.json
data/processed/: cand-001.json  cand-002.json  cand-003.json  cand-004.json  cand-005.json  cand-006.json  cand-007.json  cand-008.json  cand-009.json  cand-010.json  cand-011.json  cand-012.json  cand-013.json  cand-014.json  cand-015.json  cand-016.json  cand-017.json  cand-018.json  cand-019.json  cand-020.json  cand-021.json  cand-022.json  cand-023.json  cand-024.json  cand-025.json  cand-026.json  cand-027.json  cand-028.json  cand-029.json  cand-030.json
models/: gradient_boosted.joblib  logistic_regression.joblib  metadata.json
openspec/changes/candidate-rec-system/: design.md  proposal.md  tasks.md
openspec/changes/domain-agnostic-constraints/: design.md  proposal.md  tasks.md
scripts/: generate_training_data.py  train_models.py
src/: api.py  constraint_engine.py  evaluation.py  explanation.py  extraction.py  ml_scoring.py  models.py  retrieval.py  scoring.py  store.py
tests/: test_constraints.py  test_extraction.py  test_scoring.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: CandidateCard.tsx  CandidatesTable.tsx  HirerPanel.tsx  HowItWorksPanel.tsx  JobDetailsPanel.tsx  JobInput.tsx  ModelTrainingPanel.tsx  PipelineStatus.tsx  ResultsPanel.tsx
(+10 files in other folders)
